# tango-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  valgrind.supp
bench/: Makefile  bench.cpp  bench.py
benches/: Makefile  bench.cpp  bench.py  bench.rs
src/: c.rs  dbase.rs  error.rs  lib.rs  main.rs  proxy.rs  types.rs
src/c_tango/: Cargo.toml  build.rs  c_tango.h  c_tango_attribute.c  c_tango_command.c  c_tango_dbase.c  c_tango_proxy.c
src/c_tango/src/: binding.rs  c_tango.h  c_tango_attribute.c  c_tango_command.c  c_tango_const.c  c_tango_dbase.c  c_tango_proxy.c  lib.rs
tests/: api.rs
