[workspace]

[package]
name = "tango-client"
version = "0.1.1"
description = "Client for the Tango control system."
license = "GPL-3.0+"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
edition = "2018"

[dependencies]
libc = "0.2"
time = "0.1"

[dependencies.tango-client-sys]
path = "src/c_tango"
version = "0.1.1"
