[workspace]

[package]
name = "tango-client"
version = "0.2.1"
description = "Client for the Tango control system."
license = "GPL-3.0+"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
edition = "2018"

[dependencies]
libc = "0.2.62"
time = "0.1.42"

[dependencies.tango-client-sys]
path = "src/c_tango"
version = "0.1.2"
